tests/sources/invalid/expressions/postfix_cast_after_broken_paren.fire
// Parser error: a postfix 'as' cast applied where the preceding
// parenthesized expression failed to parse (unbalanced '(1 +)').

fn postfix_cast_after_broken_paren() -> void {
    x: int32 = (1 +) as int32;  //~ ERROR FS-PARSE-0012 @20
//~^ ERROR FS-PARSE-0010 @22
//~^^ ERROR FS-PARSE-0010 @22
}
